Adds GMTK 2024 post image

--- a/_posts/2024-08-30-GMTKGameJam2024.md
+++ b/_posts/2024-08-30-GMTKGameJam2024.md
@@ -3,6 +3,8 @@ title: My First Successful Game Jam - GMTK 2024
 date: 2024-08-30 19:46:00 +0600
 categories: [Game Dev, Godot]
 tags: [godot, gamejam]
+image:
+    path: assets/img/Lil-Guys.png
 ---
 
 I have always wanted to release my own game, but unfortunately when it comes to actually working on a game, I would rather do a gainer off my roof.
@@ -43,11 +45,7 @@ The goal I was telling myself was to “just finish a game I could submit”, bu
 
 With that genius realization, I went back to one of my first “basic” ideas of a top down game where you control a character who can grow and shrink things. I eventually decided on a puzzle game where you need to get your player and his lil buddies to a ladder to escape a collapsed mine.
 
-TODO - FIRST PROTOTYPE IMAGE ART
-
 Next I made a super basic tileset and configured an autotiler for it. I had some issues getting it to work perfectly, but with limited time I decided to just move on. The art for the rooms was mostly placeholder but I ended up liking how clean it looked and just kept that style. I also spent some time configuring collision shapes for each tile, since I’d need those for the player and also the navmesh for the other characters. After some playing around, I finally had a basic level layout to test with.
-
-TODO - FIRST LEVEL IMAGE
 
 #### Interactables
 After making some basic movement controls, I wanted to figure out the other mechanics as soon as possible. I started by adding a detection region collider to the player that would check for any overlapping objects when I pressed the interact key. I then created an “abstract” Interactable node with an `interact()` function, and tested this by making a FollowInteractable node so the other fellas would follow you/stop following after interacting with them. 
@@ -110,9 +108,7 @@ I also did a bunch of smaller things
 - Created more levels
 
 #### Intro Scene
-Now that I had a handful of levels, I wanted to spend a bit of time setting the scene. Since the goal of the game was to escape from a collapsed mine, I decided to create this intro cutscene showing the little fellas working away and somewhat setting up the premise. I used Godot’s animation player node, which felt a little janky to work with, but overall worked well enough to make this intro scene.
-
-TODO - INTRO SCENE GIF
+Now that I had a handful of levels, I wanted to spend a bit of time setting the scene. Since the goal of the game was to escape from a collapsed mine, I decided to create this intro cutscene showing the little fellas working away and somewhat setting up the premise. I used Godot’s animation player node, which felt a little janky to work with, but overall worked well enough to make the intro scene.
 
 ### Day 3
 Even though the jam didn’t end until the next day, this was my last real day to work on my game. My goal was to get uploaded before dinner so a few friends could playtest (just incase anything was game breaking) so I quickly got started with last minute polish.
